--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+    <script src="sim.js"></script>
   </head>
   <body>
     <div id="app"></div>
