--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,16 @@
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
-  </head>
-  <body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>React+Mobx Boilerplate</title>
+</head>
+
+<body>
     <div id="app"></div>
-    <script src="main.min.js"></script>
-  </body>
+</body>
+
 </html>
